--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,2 +1,3 @@
 Options +Indexes
 AddDescription "Try" "try.html" #Wed, 27 Feb 2019 17:12:31 +0000
+AddDescription "Try 2" "try-2.html" #Wed, 27 Feb 2019 17:32:41 +0000
