--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,5 +1,3 @@
 Options +Indexes
-AddDescription "Try" "try.html" #Wed, 27 Feb 2019 17:12:31 +0000
-AddDescription "Try 2" "try-2.html" #Wed, 27 Feb 2019 17:32:41 +0000
-AddDescription "try" "try.html"
-AddDescription "try3" "try3.html" #Wed, 27 Feb 2019 17:47:19 +0000
+AddDescription "10" "10.html" #Wed, 27 Feb 2019 18:17:35 +0000
+AddDescription "First Post - Simple Placeholder" "first-post-simple-placeholder.html" #Wed, 27 Feb 2019 18:58:32 +0000
