--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,3 +1,3 @@
 Options +Indexes
 AddDescription "10" "10.html" #Wed, 27 Feb 2019 18:17:35 +0000
-AddDescription "First Post - Simple Placeholder" "first-post-simple-placeholder.html" #Wed, 27 Feb 2019 18:58:32 +0000
+AddDescription "Moment" "moment.html" #Wed, 27 Feb 2019 19:18:22 +0000
