--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,3 +1,9 @@
 Options +Indexes
 AddDescription "10" "10.html" #Wed, 27 Feb 2019 18:17:35 +0000
 AddDescription "Moment" "moment.html" #Wed, 27 Feb 2019 19:18:22 +0000
+AddDescription "Shady Business in the Herbicide Industry?" "shady-business-in-the-herbicide-industry.html" #Fri, 01 Mar 2019 16:17:56 +0000
+AddDescription "Options +Indexes
+10
+Moment
+Shady Business in the Herbicide Industry?" "" #Options +IndexesWed, 27 Feb 2019 18:17:35 +0000Wed, 27 Feb 2019 19:18:22 +0000Fri, 01 Mar 2019 16:17:56 +0000
+AddDescription "" "shady-business-in-the-herbicide-industy.html" #Fri, 01 Mar 2019 17:23:08 +0000
