--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description:
 
 # List of links in the navigation bar
 navbar-links:
-  cv: Curriculum.pdf
+  cv: cv.pdf
  # Resources:
  #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
  #   - Learn markdown: "http://www.markdowntutorial.com/"
